cluster/apps/obsidian-sync/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian-sync
  namespace: syncthing
  labels:
    app: obsidian-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian-sync
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: obsidian-sync
    spec:
      containers:
        - image: syncthing/syncthing:1.30
          name: syncthing
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 8384
              name: syncthing
              protocol: TCP
            - containerPort: 22000
              protocol: TCP
              name: to-listen
            - containerPort: 22000
              protocol: UDP
              name: to-discover
          volumeMounts:
            - name: obsidian-sync-pvc
              mountPath: /var/syncthing
      volumes:
        - name: obsidian-sync-pvc
          persistentVolumeClaim:
            claimName: obsidian-sync-pvc
