cluster/apps/obsidian-sync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-sync
  namespace: syncthing
spec:
  type: NodePort
  selector:
    app: obsidian-sync
  ports:
    - name: http
      port: 32080
      targetPort: 8384
      protocol: TCP
    - protocol: TCP
      port: 32000
      targetPort: 22000
      name: to-listen
    - protocol: UDP
      port: 32000
      targetPort: 22000
      name: to-discover
